- include maven central publishing requirements
Signed-off-by: Marco Deneke <mrcdnk@t-online.de>

--- a/jacoco-coverage-exporter-server/pom.xml
+++ b/jacoco-coverage-exporter-server/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>io.github.mrcdnk</groupId>
         <artifactId>jacoco-coverage-exporter</artifactId>
-        <version>${revision}</version>
+        <version>master-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
