--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,13 +17,13 @@ jobs:
         with:
           java-version: '21'
           distribution: 'temurin'
-          server-id: ossrh
+          server-id: central
           server-username: MAVEN_USERNAME
           server-password: MAVEN_PASSWORD
       - name: Build artifacts and publish to GitHub Packages
         run: |
+          mvn versions:set -DnewVersion=${{ inputs.releaseversion }};
           mvn --batch-mode deploy -P release com.google.cloud.tools:jib-maven-plugin:3.4.1:build \
-          -Drevision=${{ inputs.releaseversion }} \
           -Djib.to.image=docker.io/${{ github.repository }}:${{ inputs.releaseversion }} \
           -Djib.to.auth.username=${{ github.actor }} \
           -Djib.to.auth.password=${{ secrets.DOCKER_HUB_TOKEN }}
