--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,9 +20,12 @@ jobs:
           server-id: central
           server-username: MAVEN_USERNAME
           server-password: MAVEN_PASSWORD
+          gpg-private-key: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }}
+          gpg-passphrase: MAVEN_GPG_PASSPHRASE
+      - name: Set projects Maven version to GitHub Action GUI set version
+        run: mvn versions:set "-DnewVersion=${{ inputs.releaseversion }}"
       - name: Build artifacts and publish to GitHub Packages
         run: |
-          mvn versions:set -DnewVersion=${{ inputs.releaseversion }};
           mvn --batch-mode deploy -P release com.google.cloud.tools:jib-maven-plugin:3.4.1:build \
           -Djib.to.image=docker.io/${{ github.repository }}:${{ inputs.releaseversion }} \
           -Djib.to.auth.username=${{ github.actor }} \
@@ -31,6 +34,7 @@ jobs:
         env:
           MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
           MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
+          MAVEN_GPG_PASSPHRASE: ${{ secrets.MAVEN_GPG_PASSPHRASE }}
       - name: Generate changelog
         id: changelog
         uses: metcalfc/changelog-generator@v4.3.1
