--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,11 +10,11 @@ on:
 jobs:
   publish:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      actions: write
     steps:
       - uses: actions/checkout@v4
-        with:
-          fetch-depth: 20
-          fetch-tags: true
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
@@ -42,6 +42,10 @@ jobs:
         uses: mikepenz/release-changelog-builder-action@v4
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 20
+          fetch-tags: true
       - name: Create GitHub Release
         id: create_release
         uses: actions/create-release@v1
