--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,6 +15,9 @@ jobs:
       actions: write
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 20
+          fetch-tags: true
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
