--- a/jacoco-coverage-exporter-spring/pom.xml
+++ b/jacoco-coverage-exporter-spring/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>io.github.mrcdnk</groupId>
         <artifactId>jacoco-coverage-exporter</artifactId>
-        <version>master-SNAPSHOT</version>
+        <version>main-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>jacoco-coverage-exporter-spring</artifactId>
@@ -21,7 +21,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>3.5.0</version>
+                <version>3.5.1</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
