--- a/jacoco-coverage-exporter-server/pom.xml
+++ b/jacoco-coverage-exporter-server/pom.xml
@@ -39,6 +39,10 @@
             <groupId>io.github.mrcdnk</groupId>
             <artifactId>jacoco-coverage-exporter-spring</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-log4j2</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
