- further pipeline fixes
Signed-off-by: Marco Deneke <mrcdnk@t-online.de>

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -57,7 +57,7 @@ jobs:
             github.rest.git.createRef({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              ref: "refs/tags/${TARGET_TAG}",
+              ref: `refs/tags/${TARGET_TAG}`,
               sha: context.sha
             })
       - name: Build Changelog
