- update for changelog action
Signed-off-by: Marco Deneke <mrcdnk@t-online.de>

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -60,12 +60,13 @@ jobs:
             })
       - name: Build Changelog
         id: changelog
-        uses: mikepenz/release-changelog-builder-action@v4
+        uses: mikepenz/release-changelog-builder-action@v5
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           configurationJson: |
             {
+              "template": "#{{CHANGELOG}}\n\n#{{RELEASE_DIFF}}"
               "categories": [
                 {
                   "title": "## 🚀 Enhancements",
