--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -66,7 +66,7 @@ jobs:
         with:
           configurationJson: |
             {
-              "template": "#{{CHANGELOG}}\n\n#{{RELEASE_DIFF}}"
+              "template": "#{{CHANGELOG}}\n\n#{{RELEASE_DIFF}}",
               "categories": [
                 {
                   "title": "## 🚀 Enhancements",
@@ -91,7 +91,7 @@ jobs:
                 {
                   "title": "## 📎 Others",
                   "labels": []
-                },
+                }
               ]
             }
       - uses: actions/checkout@v4
