--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Set projects Maven version to GitHub Action GUI set version
         run: mvn versions:set "-DnewVersion=${{ inputs.releaseversion }}"
       - name: Build artifacts and publish to Maven Central
-        if: ${{ inputs.skip-deploy-artifacts == true || inputs.skip-deploy-artifacts == 'true' }}
+        if: ${{ inputs.deploy-artifacts == true || inputs.deploy-artifacts == 'true' }}
         run: |
           mvn --batch-mode deploy -P release \
           -Djib.to.auth.username=${{ github.actor }} \
